update image link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<div class="container col-xxl-8 px-4 py-5">
 				<div class="row vh-100 flex-lg-row-reverse align-items-center g-5 py-5">
 					<div class="col-10 col-sm-8 col-lg-6">
-						<img src="https://innovationorigins.com/app/uploads/2018/10/traffic-jam-file-new-delhi-1004x674.jpg"
+						<img src="./assets/img/traffic-jam-file-new-delhi-1004x674.jpg"
 						class="rounded shadow d-block mx-lg-auto img-fluid"
 						alt="Bootstrap Themes" loading="lazy" title="" style="" width="700" height="500">
 					</div>
