fix intro vh-100 property

--- a/index.html
+++ b/index.html
@@ -52,20 +52,22 @@
 			<!-- <img src="./assets/img/img1.png" alt="" srcset=""> -->
 		</div>
 
-		<section class="container-fluid vh-100" id="intro">
-			<div class="px-4 py-5 my-5 text-center">
-				<header>
-					<div class="d-block mx-auto mb-2">
-						<i class="fas fa-car text-primary" style="font-size: 3rem;"></i>
+		<section class="container-fluid min-vh-100" id="intro">
+			<div class="row">
+				<div class="col px-4 py-5 my-5 text-center">
+					<header>
+						<div class="d-block mx-auto mb-2">
+							<i class="fas fa-car text-primary" style="font-size: 3rem;"></i>
+						</div>
+						<h2 class="display-5 mb-3 fw-bold">Introdução</h2>
+					</header>
+					<div class="col-lg-6 mx-auto">
+						<p class="lead mb-4">As políticas públicas voltadas para a mobilidade urbana avançam nas grandes cidades. Nos últimos dez anos, é possível perceber diversas alterações realizadas em ruas e avenidas para dar mais fluidez ao trânsito e segurança aos pedestres. Na capital, há esforços para construir novos túneis, terminais de ônibus e ciclofaixas, delimitar área segura para pedestre em esquinas, reduzir a velocidade em grandes vias são exemplos de medidas tomadas pelo poder público para tentar dar mais qualidade de vida aos cidadãos e cidadãs nos espaços urbanos.</p>
+
+						<p class="lead mb-4">Em 2013, por exemplo, Fortaleza possuía 54 km de faixas exclusivas para ônibus. Em 2021, esse número saltou para 123 km, de acordo com dados da Empresa de Transporte Urbano de Fortaleza (Etufor). Em 2021, a prefeitura garantiu R$ 32 milhões em subsídios para manter o congelamento do preço das passagens de ônibus em R$ 3,60, valor cobrado desde 2019. (Fonte: <a href="https://diariodonordeste.verdesmares.com.br/metro/o-que-fazer-para-o-transporte-publico-de-fortaleza-voltar-a-atrair-passageiros-e-ter-qualidade-1.3167013" target="_blank" rel="noopener">Diário do Nordeste</a>). Esta é uma estratégia importante para tornar o transporte coletivo atrativo para a maioria da população.</p>
+
+						<p class="lead mb-4">No entanto, a cultura do transporte individual movido a combustíveis não renováveis – uma das pautas da Conferência das Nações Unidas sobre Mudança do Clima, a COP26, realizada em novembro de 2021 - ainda reina nas cidades cearenses. As séries temporais abaixo demonstram a evolução crescente do quantitativo de carros e de motocicletas ao longo dos últimos anos. Este é somente um dos indicativos que demonstra o desafio que o poder público tem de transformar a cultura do transporte individual, que têm impacto no trânsito, na rede pública de saúde e no meio ambiente.</p>
 					</div>
-					<h2 class="display-5 mb-3 fw-bold">Introdução</h2>
-				</header>
-				<div class="col-lg-6 mx-auto">
-					<p class="lead mb-4">As políticas públicas voltadas para a mobilidade urbana avançam nas grandes cidades. Nos últimos dez anos, é possível perceber diversas alterações realizadas em ruas e avenidas para dar mais fluidez ao trânsito e segurança aos pedestres. Na capital, há esforços para construir novos túneis, terminais de ônibus e ciclofaixas, delimitar área segura para pedestre em esquinas, reduzir a velocidade em grandes vias são exemplos de medidas tomadas pelo poder público para tentar dar mais qualidade de vida aos cidadãos e cidadãs nos espaços urbanos.</p>
-
-					<p class="lead mb-4">Em 2013, por exemplo, Fortaleza possuía 54 km de faixas exclusivas para ônibus. Em 2021, esse número saltou para 123 km, de acordo com dados da Empresa de Transporte Urbano de Fortaleza (Etufor). Em 2021, a prefeitura garantiu R$ 32 milhões em subsídios para manter o congelamento do preço das passagens de ônibus em R$ 3,60, valor cobrado desde 2019. (Fonte: <a href="https://diariodonordeste.verdesmares.com.br/metro/o-que-fazer-para-o-transporte-publico-de-fortaleza-voltar-a-atrair-passageiros-e-ter-qualidade-1.3167013" target="_blank" rel="noopener">Diário do Nordeste</a>). Esta é uma estratégia importante para tornar o transporte coletivo atrativo para a maioria da população.</p>
-
-					<p class="lead mb-4">No entanto, a cultura do transporte individual movido a combustíveis não renováveis – uma das pautas da Conferência das Nações Unidas sobre Mudança do Clima, a COP26, realizada em novembro de 2021 - ainda reina nas cidades cearenses. As séries temporais abaixo demonstram a evolução crescente do quantitativo de carros e de motocicletas ao longo dos últimos anos. Este é somente um dos indicativos que demonstra o desafio que o poder público tem de transformar a cultura do transporte individual, que têm impacto no trânsito, na rede pública de saúde e no meio ambiente.</p>
 				</div>
 			</div>
 		</section>
