improves graphics intro section

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						</div>
 						<h2 class="display-5 mb-3 fw-bold">Gráficos</h2>
 						<p class="lead">A maioria dos gráficos abaixo possuem <i>tooltips</i> ou alguma interação.
-							<br><strong>Arraste</strong> o mouse sobre os elementos dos gráficos para interagir.
+							<br><strong>Arraste</strong> o mouse sobre os elementos dos gráficos ou <strong>Clique</strong> neles para interagir.
 							<br><span class="text-secondary">Desenvolvidos através da plataforma <a href="https://observablehq.com" rel="noopener" target="_blank">Observable</a></span>
 						</p>
 					</header>
