--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 							<div class="row">
 								<div class="col">
 									<p class="lead">
-										Aqui podemos perceber mais facílmente a explosão de registros de veículos de certas montadoras ao decorrer dos anos.
+										Aqui podemos perceber mais facílmente a explosão de registros de veículos de certas montadoras ao decorrer dos anos. Em especial, notamos a explosão da quantidade de motos, especificamente HONDA, em 2004.
 									</p>
 								</div>
 							</div>
@@ -194,10 +194,10 @@
 						<article class="col">
 							<header class="row header mb-4">
 								<h3 class="title">
-									<a href="#idade" id="idade" class="" title="Idade média da frota">#</a> Idade média da frota
+									<a href="#idade" id="idade" class="" title="Proporção de veículos por população e Idade média da frota">#</a> Proporção de veículos por população e Idade média da frota
 								</h3>
 								<span class="lead text-secondary">
-									Idade média da frota de cada município do Ceará por tipo de veículo. Use o <strong>Seletor</strong> para escolher o tipo de veículo.
+									O primeiro mapa mostra a taxa porporcional da quantidade de veículos por pessoa em cada município. O segundo mostra a idade média da frota de cada município do Ceará. Ambos representam dados de 2021 e podem ser filtrados através do <strong>Seletor</strong> para escolher o tipo de veículo desejado.
 								</span>
 							</header>
 							<div class="row mb-4">
