--- a/index.html
+++ b/index.html
@@ -95,8 +95,6 @@
 								</span>
 							</header>
 							<div class="row mb-4">
-								<!-- <iframe width="100%" height="578" frameborder="0"
-								src="https://observablehq.com/embed/4ce211ed96a728ca?cells=chassi_amount_timeline_vl"></iframe> -->
 								<iframe width="100%" height="632" frameborder="0"
   								src="https://observablehq.com/embed/4ce211ed96a728ca?cells=viewof+type_dist_combined"></iframe>
 							</div>
@@ -104,6 +102,17 @@
 								<div class="col">
 									<p class="lead text-dark">
 										Perceba o grande aumento da quantidade de veículos registrados entre 2004 e 2006, e novamente, agora em menor escala, entre 2008 e 2010. Podemos conectar esse fato a um possível aumento do poder aquisitivo do cidadão brasileiro durante nesses anos.
+									</p>
+								</div>
+							</div>
+							<div class="row mb-4">
+								<iframe width="100%" height="597" frameborder="0"
+  								src="https://observablehq.com/embed/4ce211ed96a728ca?cells=type_dist_by_year"></iframe>
+							</div>
+							<div class="row">
+								<div class="col">
+									<p class="lead text-dark">
+										Acima temos uma visão alternativa do mesmo conjunto de dados, mostrando agora a distribuição de tipos de veículos no Ceará com o passar dos anos, no formato de linha do tempo. Fica claro a mudança da configuração da frota, que apresenta cada vez mais motocicletas.
 									</p>
 								</div>
 							</div>
@@ -124,13 +133,13 @@
 								<iframe width="100%" height="720" frameborder="0"
 								src="https://observablehq.com/embed/4ce211ed96a728ca?cells=type_dist_by_region"></iframe>
 							</div>
-							<!-- <div class="row">
+							<div class="row">
 								<div class="col">
 									<p class="lead">
-										Perceba o grande aumento da quantidade de veículos registrados entre 2004 e 2006, e novamente, agora em menor escala, entre 2008 e 2010. Podemos conectar esse fato a um possível aumento do poder aquisitivo do cidadão brasileiro durante nesses anos.
+										Vemos aqui que as diferenças de configuração da frota de veículos entre as regiões metropolitanas do Ceará são pequenas, pelo menos em 2021. Mesmo assim, Fortaleza apresenta a maior quantidade de veículos que categorizamos como "Outros", com relação as demais regiões.
 									</p>
 								</div>
-							</div> -->
+							</div>
 						</article>
 					</div>
 
@@ -190,7 +199,7 @@
 									<a href="#vendas" id="vendas" class="" title="Vendas de veículos">#</a> Vendas de veículos
 								</h3>
 								<span class="lead text-secondary">
-									Valor em R$ de venda de veículos no Ceará de 1990 até 2021. No calendário: quanto mais forte a cor, maior o dinheiro arrecadado; As letras na esquerda representam o dia da semana; <strong>Escolha</strong> um ano do seletor para definir a década; Se estiver no computador, <strong>passe</strong> o mouse por cima de cada dia para obter detalhes.
+									Valor em R$ de venda de veículos no Ceará de 1990 até 2021. No calendário: quanto mais forte a cor, maior o dinheiro arrecadado; As letras na esquerda representam o dia da semana; Use o <strong>Seletor</strong> para definir a década; Se estiver no computador, <strong>passe</strong> o mouse por cima de cada dia para obter detalhes. Nas linhas do tempo, é possível filtrar <strong>Selecionando</strong> um período com o mouse.
 								</span>
 							</header>
 							<div class="row mb-4">
