--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 							<div class="row">
 								<div class="col">
 									<p class="lead">
-										Vemos aqui que as diferenças de configuração da frota de veículos entre as regiões metropolitanas do Ceará são pequenas, pelo menos em 2021. Mesmo assim, Fortaleza apresenta a maior quantidade de veículos que categorizamos como "Outros", com relação as demais regiões.
+										Vemos aqui que as diferenças de configuração da frota de veículos entre as regiões metropolitanas do Ceará são pequenas, pelo menos em 2021. Mesmo assim, Fortaleza apresenta a maior quantidade de veículos que categorizamos como "Outros" (Triciclo, Reboque, Semi Reboque, Trator de Rodas, Side-Car, Utilitário, Motor Casa etc), com relação as demais regiões.
 									</p>
 								</div>
 							</div>
