--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 <body class="app">
 
+	<!-- <main id="main" style="background: url('./assets/img/background.png');"> -->
 	<main id="main">
 		<div class="container vh-100">
 			<section class="row">
