--- a/index.html
+++ b/index.html
@@ -213,8 +213,7 @@
 								<div class="col">
 									<p class="lead">
 										No geral, vemos que os valores aumentam bastante com o passar dos anos.
-										Novamente, temos bastante atividade na decada de 2000. 2008 e 2009 apresentaram recordes de vendas que não encontramos em outros anos. Especificamente, o segundo semestre de 2009 foi o período com maior número de vendas de veículos no estado do Ceará.
-										Um ponto interessente é que não vemos valores altos assim entre 2004 e 2006, apesar desses anos apresentarem um aumento de cerca de 800.000 no número de veículos, como descobrimos anteriormente.
+										Novamente, temos bastante atividade na decada de 2000. 2008 e 2009 apresentaram recordes de vendas até então inéditos. Os anos 2000 trouxeram um grande <i>boon</i> para avenda de veículos, e em 2014 tivemos o pico de arrecadação por venda de veículos, seguido imediatamente por uma depressão que só começa a voltar aos valores anteriores em 2020.
 										Finalmente, outro ponto interessante é que as vendas costumam aumentar durante os últimos dias do mês, porém raramente vemos vendas realizadas no final de semana (Sábado e Domingo).
 									</p>
 								</div>
