--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<div class="col-lg-6 mx-auto">
 						<p class="lead my-3">
 							Esse projeto foi realizado para ajudar a extrair informações úteis da configuração da frota de veículos registrados nos municípios do Ceará.
-							Para isso, preparamos uma série de visualizações gráficas interativas que podem ser exploradas abaixo.
+							Para isso, preparamos diversas visualizações gráficas interativas que podem ser exploradas abaixo.
 						</p>
 					  	<div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
 							<a type="button" class="btn btn-primary btn-lg px-4 me-sm-3" href="#intro">Introdução</a>
@@ -102,7 +102,7 @@
 							<div class="row">
 								<div class="col">
 									<p class="lead text-dark">
-										Perceba o grande aumento da quantidade de veículos registrados entre 2004 e 2006, e novamente, agora em menor escala, entre 2008 e 2010. Podemos conectar esse fato a um possível aumento do poder aquisitivo do cidadão brasileiro durante nesses anos.
+										Perceba o grande aumento da quantidade de veículos registrados entre 2004 e 2006, e novamente, agora em menor escala, entre 2008 e 2010. Podemos conectar esse fato a um possível aumento do poder aquisitivo do cidadão brasileiro, assim como a redução do IPI nesses anos.
 									</p>
 								</div>
 							</div>
@@ -161,7 +161,7 @@
 							<div class="row">
 								<div class="col">
 									<p class="lead">
-										Através desse gráfico podemos ver em tempo real a popularidade de certas montadoras, de acordo com a quantidade de veículos delas  presentes no estado. Em especial, podemos destacar o grande aumento da quantidade de motos, especificamente HONDA, em 2004.
+										Através desse gráfico podemos ver em tempo real a popularidade de certas montadoras, de acordo com a quantidade de veículos delas presentes no estado. Em especial, podemos destacar o grande aumento da quantidade de motos, especificamente HONDA, em 2004.
 									</p>
 								</div>
 							</div>
@@ -185,8 +185,8 @@
 							<div class="row">
 								<div class="col">
 									<p class="lead">
-										Aqui podemos perceber ver como os diferentes modelos de carros ganham ou perdem popularidade com o passar dos anos. Claro, existem vários fatores em jogo que ajudam a determinar a dada popularidade de um modelo, como preço, funcionalidades etc.
-										Neste gráfico, podemos ver como carros Uno, Gol e Palio passaram um bom tempo dominando o mercado cearênse, e que apenas em anos recentes novos modelos começam a se tornar os mais populares.
+										Aqui podemos perceber como os diferentes modelos de carros ganham ou perdem popularidade com o passar dos anos. Existem vários fatores em jogo que ajudam a determinar a popularidade de um modelo, como preço, funcionalidades etc.
+										Neste gráfico, podemos ver como Uno, Gol e Palio passaram um bom tempo dominando o mercado cearense, e que apenas em anos recentes novos modelos começam a se tornar mais populares.
 									</p>
 								</div>
 							</div>
@@ -213,7 +213,7 @@
 								<div class="col">
 									<p class="lead">
 										No geral, vemos que os valores aumentam bastante com o passar dos anos.
-										Novamente, temos bastante atividade na decada de 2000. 2008 e 2009 apresentaram recordes de vendas até então inéditos. Os anos 2000 trouxeram um grande <i>boon</i> para avenda de veículos, e em 2014 tivemos o pico de arrecadação por venda de veículos, seguido imediatamente por uma depressão que só começa a voltar aos valores anteriores em 2020.
+										Novamente, temos muita atividade na década de 2000. 2008 e 2009 apresentaram recordes de vendas até então inéditos. Os anos 2000 trouxeram um grande <i>boon</i> para a venda de veículos, e em 2014 tivemos o pico de arrecadação por venda de veículos, seguido imediatamente por uma depressão que só começa a voltar aos valores anteriores em 2020.
 										Finalmente, outro ponto interessante é que as vendas costumam aumentar durante os últimos dias do mês, porém raramente vemos vendas realizadas no final de semana (Sábado e Domingo).
 									</p>
 								</div>
@@ -238,9 +238,9 @@
 							<div class="row">
 								<div class="col">
 									<p class="lead">
-										Vemos que, salve algumas exceções, a idade de cada tipo de veículo não costuma mudar muito de município a município.
+										Vemos que, salvo algumas exceções, a idade de cada tipo de veículo não costuma mudar muito de município a município.
 										As maiores exceções a essa observação estão em "Ônibus e Microonibus" e "Outros".
-										Finalmente, podemos concluir que os tipos de veículos que costumam ser mais velhos dentro do Ceará são caminhões e caminhonetes, e os mais novos motocicletas.
+										Finalmente, podemos concluir que os tipos de veículos que costumam ser mais velhos no Ceará são caminhões e caminhonetes, e os mais novos, motocicletas.
 									</p>
 								</div>
 							</div>
