--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 									<a href="#vendas" id="vendas" class="" title="Vendas de veículos">#</a> Vendas de veículos
 								</h3>
 								<span class="lead text-secondary">
-									Valor em R$ de venda de veículos no Ceará de 1990 até 2021. No calendário: quanto mais forte a cor, maior o dinheiro arrecadado; As letras na esquerda representam o dia da semana; Use o <strong>Seletor</strong> para definir a década; Se estiver no computador, <strong>passe</strong> o mouse por cima de cada dia para obter detalhes. Nas linhas do tempo, é possível filtrar <strong>Selecionando</strong> um período com o mouse.
+									Valor em R$ de venda de veículos no Ceará de 2010 até 2021. No calendário: quanto mais forte a cor, maior o dinheiro arrecadado; As letras na esquerda representam o dia da semana; Use o <strong>Seletor</strong> para definir a década; Se estiver no computador, <strong>passe</strong> o mouse por cima de cada dia para obter detalhes. Nas linhas do tempo, é possível filtrar <strong>Selecionando</strong> um período com o mouse.
 								</span>
 							</header>
 							<div class="row mb-4">
@@ -211,9 +211,12 @@
 							</div>
 							<div class="row">
 								<div class="col">
+									<div class="alert alert-info" role="alert">
+										Os gráficos acima apresentam dados somente a partir do ano 2010, devido a implementação da <a href="https://www.nfe.fazenda.gov.br/portal/principal.aspx?AspxAutoDetectCookieSupport=1">Nota Fiscal Eletrônica</a> no estado do Ceará.
+									  </div>
 									<p class="lead">
 										No geral, vemos que os valores aumentam bastante com o passar dos anos.
-										Novamente, temos muita atividade na década de 2000. 2008 e 2009 apresentaram recordes de vendas até então inéditos. Os anos 2000 trouxeram um grande <i>boon</i> para a venda de veículos, e em 2014 tivemos o pico de arrecadação por venda de veículos, seguido imediatamente por uma depressão que só começa a voltar aos valores anteriores em 2020.
+										Em 2014 tivemos o pico de arrecadação por venda de veículos, seguido imediatamente por uma depressão que só começa a voltar aos valores anteriores em 2020.
 										Finalmente, outro ponto interessante é que as vendas costumam aumentar durante os últimos dias do mês, porém raramente vemos vendas realizadas no final de semana (Sábado e Domingo).
 									</p>
 								</div>
