--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 									<a href="#vendas" id="vendas" class="" title="Vendas de veículos">#</a> Vendas de veículos
 								</h3>
 								<span class="lead text-secondary">
-									Valor em R$ de venda de veículos no Ceará de 2010 até 2021. No calendário: quanto mais forte a cor, maior o dinheiro arrecadado; As letras na esquerda representam o dia da semana; Use o <strong>Seletor</strong> para definir a década; Se estiver no computador, <strong>passe</strong> o mouse por cima de cada dia para obter detalhes. Nas linhas do tempo, é possível filtrar <strong>Selecionando</strong> um período com o mouse.
+									Valor em R$ de venda de veículos no Ceará de 2010 até 2021. No calendário: quanto mais forte a cor, maior o dinheiro arrecadado; As letras na esquerda representam o dia da semana; Use o <strong>Seletor</strong> para definir a década; Se estiver no computador, <strong>passe</strong> o mouse por cima de cada dia para obter detalhes. No painel abaixo do calendário, é possível filtrar <strong>Selecionando</strong> um período com o mouse.
 								</span>
 							</header>
 							<div class="row mb-4">
