--- a/index.html
+++ b/index.html
@@ -200,13 +200,13 @@
 									<a href="#vendas" id="vendas" class="" title="Vendas de veículos">#</a> Vendas de veículos
 								</h3>
 								<span class="lead text-secondary">
-									Valor em R$ de venda de veículos no Ceará de 2010 até 2021. No calendário: quanto mais forte a cor, maior o dinheiro arrecadado; As letras na esquerda representam o dia da semana; Use o <strong>Seletor</strong> para definir a década; Se estiver no computador, <strong>passe</strong> o mouse por cima de cada dia para obter detalhes. No painel abaixo do calendário, é possível filtrar <strong>Selecionando</strong> um período com o mouse.
+									Valor em R$ de venda de veículos no Ceará de 2010 até 2021. No calendário: quanto mais forte a cor, maior a venda; As letras na esquerda representam o dia da semana; Use o <strong>Seletor</strong> para definir a década; Se estiver no computador, <strong>passe</strong> o mouse por cima de cada dia para obter detalhes. No painel abaixo do calendário, é possível filtrar <strong>Selecionando</strong> um período com o mouse.
 								</span>
 							</header>
 							<div class="row mb-4">
 								<iframe width="100%" height="608" frameborder="0"
 									src="https://observablehq.com/embed/4ce211ed96a728ca?cells=calendar_chart%2Cviewof+Decada"></iframe>
-								<iframe width="100%" height="608" frameborder="0"
+								<iframe width="100%" height="620" frameborder="0"
   									src="https://observablehq.com/embed/4ce211ed96a728ca?cells=viewof+cal2"></iframe>
 							</div>
 							<div class="row">
@@ -216,8 +216,8 @@
 									  </div>
 									<p class="lead">
 										No geral, vemos que os valores aumentam bastante com o passar dos anos.
-										Em 2014 tivemos o pico de arrecadação por venda de veículos, seguido imediatamente por uma depressão que só começa a voltar aos valores anteriores em 2020.
-										Finalmente, outro ponto interessante é que as vendas costumam aumentar durante os últimos dias do mês, porém raramente vemos vendas realizadas no final de semana (Sábado e Domingo).
+										Em 2014 tivemos o pico de vendas de veículos, seguido imediatamente por uma depressão que só começa a voltar aos valores anteriores em 2020.
+										Finalmente, outro ponto interessante é que as vendas costumam aumentar durante os últimos dias do mês, porém raramente vemos vendas realizadas no final de semana (Sábado e Domingo). Costmam ser maiores, também, na segunda metade do ano.
 									</p>
 								</div>
 							</div>
