--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 							<div class="row">
 								<div class="col">
 									<div class="alert alert-info" role="alert">
-										Os gráficos acima apresentam dados somente a partir do ano 2010, devido a implementação da <a href="https://www.nfe.fazenda.gov.br/portal/principal.aspx?AspxAutoDetectCookieSupport=1">Nota Fiscal Eletrônica</a> no estado do Ceará.
+										Os gráficos acima apresentam dados somente a partir do ano 2010, devido a implementação da <a href="https://www.nfe.fazenda.gov.br/portal/principal.aspx">Nota Fiscal Eletrônica</a> no estado do Ceará.
 									  </div>
 									<p class="lead">
 										No geral, vemos que os valores aumentam bastante com o passar dos anos.
