--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 						<article class="col">
 							<header class="row header mb-4">
 								<h3 class="title">
-									<a href="#corrida" id="corrida" class="" title="Crescimento das montadoras">#</a> Crescimento das montadoras
+									<a href="#crescimento-montadoras" id="crescimento-montadoras" class="" title="Crescimento das montadoras">#</a> Crescimento das montadoras
 								</h3>
 								<span class="lead text-secondary">
 									Crescimento das montadoras no ceará com o passar dos anos. O número representa a quantidade de veículos registrados daquela montadora no estado em determinada época. <strong>Aperte</strong> em Replay para reiniciar a animação e use o <strong>Seletor</strong> para escolher o tipo de veículo.
@@ -172,7 +172,7 @@
 						<article class="col">
 							<header class="row header mb-4">
 								<h3 class="title">
-									<a href="#corrida" id="corrida" class="" title="Crescimento de modelos de carro">#</a> Crescimento de modelos de carro
+									<a href="#crescimento-modelos" id="crescimento-modelos" class="" title="Crescimento de modelos de carro">#</a> Crescimento de modelos de carro
 								</h3>
 								<span class="lead text-secondary">
 									Quantidade de carros de cada modelo com o passar dos anos. O número representa a quantidade de veículos daquele modelo de carro registrados no estado em determinada época. <strong>Aperte</strong> em Replay para reiniciar a animação.
@@ -197,7 +197,7 @@
 						<article class="col">
 							<header class="row header mb-4">
 								<h3 class="title">
-									<a href="#vendas" id="vendas" class="" title="Vendas de veículos">#</a> Vendas de veículos
+									<a href="#vendas-veiculos" id="vendas-veiculos" class="" title="Vendas de veículos">#</a> Vendas de veículos
 								</h3>
 								<span class="lead text-secondary">
 									Valor em R$ de venda de veículos no Ceará de 2010 até 2021. No calendário: quanto mais forte a cor, maior a venda; As letras na esquerda representam o dia da semana; Use o <strong>Seletor</strong> para definir a década; Se estiver no computador, <strong>passe</strong> o mouse por cima de cada dia para obter detalhes. No painel abaixo do calendário, é possível filtrar <strong>Selecionando</strong> um período com o mouse.
